# flask-apcore

./: CHANGELOG.md  README.md  pyproject.toml
docs/flask-apcore/: prd.md  tech-design.md
docs/plans/: 2026-02-23-redesign-design.md  2026-02-23-redesign-implementation.md  2026-02-23-schema-explorer-design.md  2026-02-23-schema-explorer-implementation.md  2026-02-24-explorer-simplify-design.md  2026-02-24-explorer-simplify-implementation.md
examples/demo/: .env.example  Dockerfile  README.md  app.py  docker-compose.yml  entrypoint.sh
ideas/: flask-apcore-idea.md
src/flask_apcore/: __init__.py  cli.py  config.py  context.py  extension.py  observability.py  registry.py  serializers.py
src/flask_apcore/output/: __init__.py  json_writer.py  openapi_writer.py  registry_writer.py  yaml_writer.py
src/flask_apcore/scanners/: __init__.py  base.py  native.py
src/flask_apcore/schemas/: __init__.py  _constants.py  marshmallow_backend.py  pydantic_backend.py  typehints_backend.py
src/flask_apcore/web/: __init__.py  _openapi.py  api.py  views.py
tests/: __init__.py  _test_target_module.py  conftest.py  test_cli_scan.py  test_cli_serve.py  test_config.py  test_context.py  test_extension.py  test_integration.py  test_json_writer.py  test_observability.py  test_openapi_writer.py  test_public_api.py  test_registry.py  test_registry_writer.py  test_scanner_base.py  test_scanner_native.py  test_schema_dispatcher.py  test_schema_marshmallow.py  test_schema_pydantic.py  test_schema_typehints.py  test_serializers.py  test_web.py  test_yaml_writer.py
